--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -58,7 +58,7 @@ SRCS_DIR = $(shell find $(SRC_DIR) -type d)
 INC =
 vpath %.hpp $(INC_DIR)
 
-SRC = phonebook.cpp 
+SRC = main.cpp 
 
 OBJ = $(addprefix  $(OBJ_DIR)/,$(SRC:%.cpp=%.o))
 vpath %.cpp $(SRCS_DIR)
